app/assets/stylesheets/components-vue/_carousel.scss
//--------------------------------------------------
// keyframes
//--------------------------------------------------
@keyframes fadeOutSlide {
  from { opacity: 1; }
  to { opacity: 0; }
}

@keyframes fadeInSlide {
  from { opacity: 0; }
  to { opacity: 1; }
}

@keyframes hideSlide {
  from { height: 100%; }
  to { height: 0; }
}

@keyframes showSlide {
  from { height: 0; }
  to { height: 100%; }
}

//--------------------------------------------------
// carousel
//--------------------------------------------------
.carousel {
  min-height: rem-calc(550);

  position: relative;

  h1 {
    border-bottom: solid $grey 1px;
    padding-bottom: rem-calc(12);
  }

//--------------------------------------------------
// slide nav
//--------------------------------------------------
  &__steps {
    color: $grey;
    font-size: rem-calc(25);

    position: absolute;
    top: rem-calc(12);
    right: 0;
  }

//--------------------------------------------------
// slides
//--------------------------------------------------
  &__slides {
    
  }
//--------------------------------------------------
// slide
//--------------------------------------------------
    &__slide {
      opacity: 0;
      overflow: hidden;
      width: 100%; height: 0;

      &--first { 
        opacity: 1; 
        height: 100%;
      }

      &--hide { 
        animation: fadeOutSlide .3s 1 normal forwards ease-out, hideSlide .001s 1 normal forwards linear .3s;
      }

      &--show {
        animation: showSlide .001s 1 normal forwards linear .3s, fadeInSlide .2s 1 normal forwards ease-in .301s;
      }
    }
}

